# dmarc-analyzer

./: README.md  pyproject.toml  requirements.txt
dmarc_analyzer/: __init__.py  __main__.py  ip_org.py  parse.py  rules.py  server.py
static/: app.js  index.html  style.css
