[project]
name = "dmarc-analyzer"
version = "0.1.0"
description = "Local DMARC aggregate report scanner with browser UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.12",
  "defusedxml>=0.7.1",
  "ipwhois>=1.2.0",
]

[project.scripts]
dmarc-analyzer = "dmarc_analyzer.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dmarc_analyzer"]
